//! Quorum calculation scenarios for ReplicationHandler
//!
//! Tests verify correct quorum calculation across different scenarios:
//! - B1: Quorum achieved (success cases)
//! - B2: Quorum not achieved (failure cases)
//! - B3: Special response handling (higher term, stale term, RPC failures)

use std::collections::HashMap;
use std::sync::Arc;

use crate::AppendResult;
use crate::ClusterMetadata;
use crate::LeaderStateSnapshot;
use crate::MockMembership;
use crate::MockRaftLog;
use crate::MockTransport;
use crate::MockTypeConfig;
use crate::PeerUpdate;
use crate::ReplicationCore;
use crate::ReplicationHandler;
use crate::StateSnapshot;
use crate::test_utils::mock_raft_context;
use d_engine_proto::common::LogId;
use d_engine_proto::common::NodeRole::Follower;
use d_engine_proto::common::NodeRole::Leader;
use d_engine_proto::common::NodeStatus;
use d_engine_proto::server::cluster::NodeMeta;
use d_engine_proto::server::replication::AppendEntriesResponse;
use tokio::sync::watch;

/// Helper: Create mock membership for multi-node cluster
fn create_mock_membership_multi_node() -> MockMembership<MockTypeConfig> {
    let mut membership = MockMembership::new();
    membership.expect_is_single_node_cluster().returning(|| false);
    membership.expect_initial_cluster_size().returning(|| 3);
    membership
}

/// Two-node cluster should achieve quorum when peer responds with success.
///
/// # Scenario
/// - Cluster: 1 leader + 1 voter (2 nodes total)
/// - Peer response: Success with match_index=3
/// - Expected: Quorum achieved (2/2), peer_update recorded
#[tokio::test]
async fn test_two_node_quorum_achieved_with_peer_success() {
    // Arrange: Setup two-node cluster context
    let (_graceful_tx, graceful_rx) = watch::channel(());
    let mut context = mock_raft_context(
        "/tmp/test_two_node_quorum_achieved_with_peer_success",
        graceful_rx,
        None,
    );
    let my_id = 1;
    let peer2_id = 2;
    let handler = ReplicationHandler::<MockTypeConfig>::new(my_id);

    // Arrange: Leader state with empty batch
    let commands = Vec::new();
    let state_snapshot = StateSnapshot {
        current_term: 1,
        voted_for: None,
        commit_index: 1,
        role: Leader.into(),
    };
    let leader_state_snapshot = LeaderStateSnapshot {
        next_index: HashMap::new(),
        match_index: HashMap::new(),
        noop_log_id: None,
    };

    // Arrange: Mock membership with one voter peer
    let mut membership = create_mock_membership_multi_node();
    membership.expect_replication_peers().returning(move || {
        vec![NodeMeta {
            id: peer2_id,
            address: "http://127.0.0.1:55001".to_string(),
            role: Follower.into(),
            status: NodeStatus::Active.into(),
        }]
    });
    membership.expect_voters().returning(move || {
        vec![NodeMeta {
            id: peer2_id,
            address: "http://127.0.0.1:55001".to_string(),
            role: Follower.into(),
            status: NodeStatus::Active.into(),
        }]
    });
    context.membership = Arc::new(membership);

    // Arrange: Mock raft log
    let mut raft_log = MockRaftLog::new();
    raft_log.expect_last_entry_id().returning(|| 1);
    raft_log.expect_get_entries_range().returning(|_| Ok(vec![]));
    raft_log.expect_entry_term().returning(|_| None);
    context.storage.raft_log = Arc::new(raft_log);

    // Arrange: Mock transport with successful peer response (match_index=3)
    let mut transport = MockTransport::new();
    transport.expect_send_append_requests().return_once(move |_, _, _, _| {
        Ok(AppendResult {
            peer_ids: vec![peer2_id].into_iter().collect(),
            responses: vec![Ok(AppendEntriesResponse::success(
                peer2_id,
                1,
                Some(LogId { term: 1, index: 3 }),
            ))],
        })
    });
    context.transport = Arc::new(transport);

    // Act: Process empty batch with 2-node cluster metadata
    let result = handler
        .handle_raft_request_in_batch(
            commands,
            state_snapshot,
            leader_state_snapshot,
            &ClusterMetadata {
                single_voter: false,
                replication_targets: vec![NodeMeta {
                    id: peer2_id,
                    address: "http://127.0.0.1:55001".to_string(),
                    role: Follower.into(),
                    status: NodeStatus::Active.into(),
                }],
                total_voters: 2,
            },
            &context,
        )
        .await
        .unwrap();

    // Assert: Quorum achieved and peer update recorded correctly
    assert!(
        result.commit_quorum_achieved,
        "two-node cluster should achieve quorum with peer success"
    );
    assert_eq!(
        result.peer_updates.get(&peer2_id),
        Some(&PeerUpdate {
            match_index: Some(3),
            next_index: 4,
            success: true
        }),
        "peer update should reflect match_index=3, next_index=4"
    );
}

// ============================================================================
// TODO: Quorum Achieved (B1 remaining cases)
// ============================================================================

/// Three-node cluster with all peers success (TODO).
#[tokio::test]
#[ignore = "TODO: Implement test"]
async fn test_three_node_quorum_all_peers_success() {
    // TODO: Implement test
}

/// Three-node cluster with partial timeout (TODO).
#[tokio::test]
#[ignore = "TODO: Implement test"]
async fn test_three_node_quorum_partial_timeout() {
    // TODO: Implement test
}

/// Five-node cluster with majority success (TODO).
#[tokio::test]
#[ignore = "TODO: Implement test"]
async fn test_five_node_quorum_majority_success() {
    // TODO: Implement test
}

// ============================================================================
// TODO: Quorum NOT Achieved (B2 cases)
// ============================================================================

/// Three-node cluster with single success (no quorum) (TODO).
#[tokio::test]
#[ignore = "TODO: Implement test"]
async fn test_three_node_no_quorum_single_success() {
    // TODO: Implement test
}

/// Three-node cluster with all timeouts (TODO).
#[tokio::test]
#[ignore = "TODO: Implement test"]
async fn test_three_node_no_quorum_all_timeouts() {
    // TODO: Implement test
}

/// Five-node cluster with minority success (TODO).
#[tokio::test]
#[ignore = "TODO: Implement test"]
async fn test_five_node_no_quorum_minority_success() {
    // TODO: Implement test
}

// ============================================================================
// TODO: Special Response Handling (B3 cases)
// ============================================================================

/// Peer returns higher term (TODO).
#[tokio::test]
#[ignore = "TODO: Implement test"]
async fn test_higher_term_response() {
    // TODO: Implement test
}

/// Peer returns stale term (TODO).
#[tokio::test]
#[ignore = "TODO: Implement test"]
async fn test_stale_term_response() {
    // TODO: Implement test
}

/// RPC failure ignored (TODO).
#[tokio::test]
#[ignore = "TODO: Implement test"]
async fn test_rpc_failure_ignored() {
    // TODO: Implement test
}
